--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,22 @@
+
+
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
 apply plugin: 'com.google.gms.google-services'
 
-android {
-    compileSdk 31
+apply plugin: 'applovin-quality-service'
+applovin {
+    apiKey "xtpUtT_GKVfURqxNTS3AKUzx93hxh23XqSWIIXVKZdofgi1AgHyrwqokEQ9LgK3_sRI8ykBxAeTwVuzTWq4HMG"
+}
 
+
+android {
+    compileSdk 33
     defaultConfig {
-        applicationId "com.team.wifimanager"
-        minSdk 21
-        targetSdk 31
+        applicationId "com.prowify.wifimanager"
+        minSdk 33
+        targetSdk 33
         versionCode 12
         versionName "1.0.1"
 
@@ -31,6 +38,7 @@ android {
             buildConfigField "String", "API","\"http://cricketfirst.co.in/Apps/WIFIPASS/api100/\""
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -48,7 +56,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
+
     implementation 'com.airbnb.android:lottie:4.2.2'
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
@@ -67,7 +75,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
+    implementation 'com.applovin:applovin-sdk:+'
     implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
     implementation 'com.google.firebase:firebase-crashlytics:18.3.1'
 
